[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://pong_theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/ping_pong_8bit_beeep.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.6866, 360 )

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_right = 200.0
theme = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = 20.0
theme = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1232, 352 )

[node name="TopWall" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 640, -16 )
shape = SubResource( 1 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 752 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 640, -16 )
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 56, 368 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="LeftWall" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -16, 360 )
shape = SubResource( 2 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 1312, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( -16, 360 )
shape = SubResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="LeftWall" to="." method="_on_LeftWall_body_entered"]
[connection signal="body_entered" from="RightWall" to="." method="_on_RightWall_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
